# agent-profiler

./: README.md
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: README.md  bitville-apm-daemon.service  profiling.ini  supervisord.conf
listener/: .env.example  README.md  bitville-listener.service  package.json  test-circuit-breaker.ts  test-cleanup.ts  test-db.ts  test-forwarder.ts  test-integration.ts  test-listener.db  test-listener.db-shm  test-queries.db-shm  test-queries.db-wal  test-queries.ts  test-rate-limit.ts  test-replay.db-shm  test-replay.db-wal  test-udp.ts
listener/public/: app.js  index.html  stats.js  styles.css  timeline.js
listener/src/: server.ts
php-agent/: composer.json
php-agent/daemon/: buffer_manager.php  circuit_breaker.php  daemon.php  health_check.php  socket_server.php  transmitter.php  worker_lifecycle.php
php-agent/profiling/: config.php  correlation.php  listener.php  request_collector.php  (+3 more)
postgres-agent/: README.md  pyproject.toml  requirements.txt
postgres-agent/config/: agent.ini.example
postgres-agent/src/: __init__.py  __main__.py  config.py  daemon.py
postgres-agent/src/collectors/: __init__.py  log_parser.py  pg_activity.py  pg_locks.py  pg_statements.py  system_metrics.py
postgres-agent/src/database/: __init__.py  pool.py
postgres-agent/src/transmission/: __init__.py  buffer.py  circuit_breaker.py  http_client.py
postgres-agent/systemd/: postgres-agent.service
(+89 files in other folders)
